--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/error-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/error-1.0.0.yaml
@@ -13,7 +13,9 @@ properties:
   deviation:
     description: |
       &lt;TODO DESCRIPTIONs&gt;
-    type: number
+    anyOf:
+      - type: number
+      - $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
 
 
 required: [deviation]
