--- a/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
@@ -10,7 +10,7 @@ type: object
 properties:
   prop1:
     tag: tag:stsci.edu:asdf/core/ndarray-1.0.0
-    wx_shape: [1,2,3]
+    wx_shape: [1,2,(3),(4)]
 
   prop2:
     tag: tag:stsci.edu:asdf/core/ndarray-1.0.0
@@ -18,7 +18,7 @@ properties:
 
   prop3:
     tag: tag:stsci.edu:asdf/core/ndarray-1.0.0
-    wx_shape: [2,4,6,8,10]
+    wx_shape: [2,4,6,8,...]
 
   prop4:
     tag: tag:stsci.edu:asdf/core/ndarray-1.0.0
@@ -41,11 +41,11 @@ propertyOrder: [prop1,prop2,prop3,prop4,nested_prop]
 flowStyle: block
 additionalProperties: true
 wx_shape:
-  prop1: [1,2,3]
-  prop2: [3,2,1]
-  prop3: [2,4,6,8,10]
-  prop4: [1,3,5,7,9]
+  prop1: [(~),2,n]
+  prop2: [n,2,1]
+  prop3: [2,4,5~7,...]
+  prop4: [1,3,5,k,m]
   nested_prop:
-    p1: [10,8,6,4,2]
-    p2: [9,7,5,3,1]
+    p1: [10,1~10,6,4,2]
+    p2: [(m),7,5,3,1]
 ...
