--- a/setup.cfg
+++ b/setup.cfg
@@ -17,17 +17,17 @@ exclude =
     .vulture_whitelist.py
 
 [pydocstyle]
-match = (?!__)(?!versioneer)(?!_version).*\.py
+match = (?!__)(?!versioneer)(?!_version)(?!conftest).*\.py
 match_dir = [^\.][^\docs].*
 ignore = D203,D213
 
 [tool:pytest]
-addopts = --tb=short --color=yes --cov=weldx --cov-report=term-missing:skip-covered
+addopts = --tb=short --color=yes --cov=weldx --cov-report=term-missing:skip-covered -rs
 asdf_schema_root = weldx/asdf/schemas
 #asdf_schema_tests_enabled = true
 # custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
 markers =
-    slow: marks tests as slow (deselect from pytest run with '-m "not slow"' option)
+    slow: marks tests as slow to run (skipped by default, enable with --runslow option)
 
 [isort]
 multi_line_output=3
