--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -10,7 +10,7 @@ exclude_patterns = [
   ".vulture_whitelist.py",
   "versioneer.py",
   "weldx/_version.py",
-  "weldx/asdf/**"
+  "weldx/asdf/**",
   "scripts/validate_shapes.py"
 ]
 
