add descriptions and remove unused sensor class

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/mathematical_expression-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/mathematical_expression-1.0.0.yaml
@@ -7,7 +7,10 @@ tag: "tag:weldx.bam.de:weldx/core/mathematical_expression-1.0.0"
 title: |
   Schema that describes a mathematical_expression.
 description: |
-  TODO
+  Defines a mathematical expression using sympy syntax.
+  https://docs.sympy.org/latest/modules/core.html#module-sympy.core.sympify
+
+  Also contains any predefined (constant) parameters used in the expression.
 type: object
 properties:
   expression:
