--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/error-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/error-1.0.0.yaml
@@ -5,14 +5,14 @@ id: "http://weldx.bam.de/schemas/weldx/measurement/error-1.0.0"
 tag: "tag:weldx.bam.de:weldx/measurement/error-1.0.0"
 
 title: |
-  Meassurement error description.
+  Measurement error description.
 description: |
   A basic schema to represent a measurement error.
 type: object
 properties:
   deviation:
     description: |
-      A simple numerical represenation of the error.
+      A simple numerical representation of the error.
     anyOf:
       - type: number
       - $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
