--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/rotation-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/rotation-1.0.0.yaml
@@ -9,19 +9,30 @@ title: |
 description: |
   ASDF implementation for Scipy.Rotation class.
 
-type: object
-properties:
-  sequence:
+anyOf:
+  - type: object
     description: |
-      Euler angles rotation sequence.
-    type: string # TODO: add enum or regex
-  angles:
-    description: |
-      Rotation angles data.
-    tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
+      Quaternion rotation representation.
+    properties:
+      quaternions:
+        tag: "tag:stsci.edu:asdf/core/ndarray-1.0.0"
+    required: [quaternions]
+    flowStyle: block
+    additionalProperties: false
 
-required: [sequence, angles]
-propertyOrder: [sequence, angles]
-flowStyle: block
-additionalProperties: false
+  - type: object
+    description: |
+      Euler angles representation.
+    properties:
+      sequence:
+        description: |
+          Euler angles rotation sequence.
+        type: string # TODO: add enum or regex
+      angles:
+        description: |
+          Rotation angles data.
+        tag: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
+    required: [sequence, angles]
+    flowStyle: block
+    additionalProperties: false
 ...
