Add shape as optional asdf parameter to expressions

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
@@ -41,6 +41,8 @@ anyOf:
         tag: "tag:weldx.bam.de:weldx/core/mathematical_expression-1.0.0"
       unit:
         type: string
+      shape:
+        type: array
       required: [values,unit]
       additionalProperties: false
 
