--- a/environment.yml
+++ b/environment.yml
@@ -12,7 +12,7 @@ dependencies:
   - xarray>=0.15
   - pint>=0.11
   - bottleneck
-  - asdf=2.6
+  - asdf>=2.7
   - sphinx
   - recommonmark
   - openpyxl
