--- a/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/error-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/measurement/error-1.0.0.yaml
@@ -13,7 +13,7 @@ properties:
   deviation:
     description: |
       A simple numerical representation of the error.
-    anyOf:
+    oneOf:
       - type: number
       - $ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
 
