--- a/weldx/asdf/schemas/weldx.bam.de/weldx/time/datetimeindex-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/time/datetimeindex-1.0.0.yaml
@@ -40,7 +40,7 @@ definitions:
       Maximum timestamp in the index.
     $ref: timestamp-1.0.0
 
-anyOf:
+oneOf:
   - type: object
     properties:
       values:
