--- a/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/weld_details-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/aws/design/weld_details-1.0.0.yaml
@@ -13,12 +13,12 @@ properties:
   joint_design:
     description: |
       AWS 3.0, p. 19 : "Detailed Description of mating configuration of two components, sufficient information for shop preparation of the components." TODO CLASS
-    $ref: ../../core/iso_groove-1.0.0
+    tag: "tag:weldx.bam.de:weldx/core/iso_groove-1.0.0"
 
   weld_sizes:
     description: |
       Linear dimensions of cross sectional weld features. Sizes are of design and actual features. TODO CLASS
-    -$ref: tag:stsci.edu:asdf/unit/quantity-1.1.0
+    tag: tag:stsci.edu:asdf/unit/quantity-1.1.0
 
   number_of_passes:
     description: |
