Add enum to TimeSeries schema

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
@@ -65,6 +65,7 @@ anyOf:
         description: |
           Method how the data should be interpolated.
         type: string
+        enum: [linear, step]
       values:
         description: |
           Set of discrete n-dimensional data.
