refactor to test matrix and add pytest option without cov plugin

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,8 @@ match_dir = [^\.][^\docs].*
 ignore = D203,D213
 
 [tool:pytest]
-addopts = --tb=short --color=yes --cov=weldx --cov-report=term-missing:skip-covered -rs
+addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-covered
+#addopts = --tb=short --color=yes -rs -p no:cov
 asdf_schema_root = weldx/asdf/schemas
 #asdf_schema_tests_enabled = true
 # custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
