use oneOf in time_series-1.0.0.yaml and always yield ValidationError form wx_shape_validator

--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
@@ -8,7 +8,7 @@ title: |
   Schema that describes a time series.
 description: |
   Describes a time dependent quantity.
-anyOf:
+oneOf:
   - type: object
     description: |
       Implementation for constant values.
