--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,6 @@ per-file-ignores =
 exclude =
     versioneer.py,
     __init__.py,
-    .vulture_whitelist.py
 
 [pydocstyle]
 match = (?!__)(?!versioneer)(?!_version)(?!conftest).*\.py
@@ -22,7 +21,8 @@ match_dir = [^\.][^\docs].*
 ignore = D203,D213
 
 [tool:pytest]
-addopts = --tb=short --color=yes --cov=weldx --cov-report=term-missing:skip-covered -rs
+addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-covered
+#addopts = --tb=short --color=yes -rs -p no:cov
 asdf_schema_root = weldx/asdf/schemas
 #asdf_schema_tests_enabled = true
 # custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
