--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/iso_groove-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/iso_groove-1.0.0.yaml
@@ -53,13 +53,13 @@ definitions:
       Special depth
     $ref: "tag:stsci.edu:asdf/unit/quantity-1.1.0"
 
-anyOf:
+oneOf:
   # I Groove
   - type: object
     properties:
       type:
         type: string
-        const: IGroove
+        enum: [IGroove]
       components:
         type: object
         properties:
@@ -67,18 +67,21 @@ anyOf:
             $ref: "#/definitions/workpiece-thickness"
           b:
             $ref: "#/definitions/root-gap"
-
+          code_number:
+            type: array
         required: [t, b]
+        wx_unit:
+          t: "m"
+          b: "m"
     required: [type, components]
     propertyOrder: [type, components]
-    additionalProperties: true
 
   # Single U Groove
   - type: object
     properties:
       type:
         type: string
-        const: SingleUGroove
+        enum: [SingleUGroove]
       components:
         type: object
         properties:
@@ -92,8 +95,16 @@ anyOf:
             $ref: "#/definitions/root-gap"
           c:
             $ref: "#/definitions/root-face"
-
+          code_number:
+            type: array
         required: [t, beta, R, b, c]
+        additionalProperties: false
+        wx_unit:
+          t: "m"
+          beta: "degree"
+          R: "m"
+          b: "m"
+          c: "m"
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
@@ -103,7 +114,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: SingleVGroove
+        enum: [SingleVGroove]
       components:
         type: object
         properties:
@@ -115,18 +126,25 @@ anyOf:
             $ref: "#/definitions/root-gap"
           c:
             $ref: "#/definitions/root-face"
-
+          code_number:
+            type: array
         required: [t, alpha, b, c]
+        additionalProperties: false
+        wx_unit:
+          t: "m"
+          alpha: "degree"
+          b: "m"
+          c: "m"
     required: [type, components]
     propertyOrder: [type, components]
-    additionalProperties: true
+    additionalProperties: false
 
   # U Groove with V Root
   - type: object
     properties:
       type:
         type: string
-        const: UVGroove
+        enum: [UVGroove]
       components:
         type: object
         properties:
@@ -142,8 +160,17 @@ anyOf:
             $ref: "#/definitions/root-gap"
           h:
             $ref: "#/definitions/root-face"
-
+          code_number:
+            type: array
         required: [t, alpha, beta, R, b, h]
+        additionalProperties: false
+        wx_unit:
+          t: "m"
+          alpha: "degree"
+          beta: "degree"
+          R: "m"
+          b: "m"
+          h: "m"
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
@@ -153,7 +180,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: VVGroove
+        enum: [VVGroove]
       components:
         type: object
         properties:
@@ -167,8 +194,18 @@ anyOf:
             $ref: "#/definitions/root-gap"
           c:
             $ref: "#/definitions/root-face"
-
-        required: [t, alpha, beta, b, c]
+          h:
+            $ref: "#/definitions/root-face"
+          code_number:
+            type: array
+        required: [t, alpha, beta, b, c, h]
+        additionalProperties: false
+        wx_unit:
+          t: "m"
+          alpha: "degree"
+          beta: "degree"
+          b: "m"
+          c: "m"
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
@@ -178,7 +215,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: HVGroove
+        enum: [HVGroove]
       components:
         type: object
         properties:
@@ -190,8 +227,15 @@ anyOf:
             $ref: "#/definitions/root-gap"
           c:
             $ref: "#/definitions/root-face"
-
+          code_number:
+            type: array
         required: [t, beta, b, c]
+        additionalProperties: false
+        wx_unit:
+          t: "m"
+          beta: "degree"
+          b: "m"
+          c: "m"
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
@@ -201,7 +245,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: HUGroove
+        enum: [HUGroove]
       components:
         type: object
         properties:
@@ -215,8 +259,16 @@ anyOf:
             $ref: "#/definitions/root-gap"
           c:
             $ref: "#/definitions/root-face"
-
+          code_number:
+            type: array
         required: [t, beta, R, b, c]
+        additionalProperties: false
+        wx_unit:
+          t: "m"
+          beta: "degree"
+          R: "m"
+          b: "m"
+          c: "m"
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
@@ -226,7 +278,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: DoubleVGroove
+        enum: [DoubleVGroove]
       components:
         type: object
         properties:
@@ -236,8 +288,6 @@ anyOf:
             $ref: "#/definitions/groove-angle"
           alpha_2:
             $ref: "#/definitions/groove-angle"
-          R:
-            $ref: "#/definitions/bevel-radius"
           b:
             $ref: "#/definitions/root-gap"
           c:
@@ -246,8 +296,18 @@ anyOf:
             $ref: "#/definitions/root-face"
           h2:
             $ref: "#/definitions/root-face"
-
-        required: [t, alpha_1, alpha_2, R, b, c]
+          code_number:
+            type: array
+        required: [t, alpha_1, alpha_2, b, c]
+        additionalProperties: false
+        wx_unit:
+          t: "m"
+          alpha_1: "degree"
+          alpha_2: "degree"
+          b: "m"
+          c: "m"
+          h1: "m"
+          h2: "m"
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
@@ -257,7 +317,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: DoubleUGroove
+        enum: [DoubleUGroove]
       components:
         type: object
         properties:
@@ -279,8 +339,20 @@ anyOf:
             $ref: "#/definitions/root-face"
           h2:
             $ref: "#/definitions/root-face"
-
+          code_number:
+            type: array
         required: [t, beta_1, beta_2, R, R2, b, c]
+        additionalProperties: false
+        wx_unit:
+          t: "m"
+          beta_1: "degree"
+          beta_2: "degree"
+          R: "m"
+          R2: "m"
+          b: "m"
+          c: "m"
+          h1: "m"
+          h2: "m"
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
@@ -290,7 +362,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: DoubleHVGroove
+        enum: [DoubleHVGroove]
       components:
         type: object
         properties:
@@ -308,8 +380,18 @@ anyOf:
             $ref: "#/definitions/root-gap"
           c:
             $ref: "#/definitions/root-face"
-
+          code_number:
+            type: array
         required: [t, beta_1, beta_2, b, c]
+        additionalProperties: false
+        wx_unit:
+          t: "m"
+          beta_1: "degree"
+          beta_2: "degree"
+          b: "m"
+          c: "m"
+          h1: "m"
+          h2: "m"
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
@@ -319,7 +401,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: DoubleHUGroove
+        enum: [DoubleHUGroove]
       components:
         type: object
         properties:
@@ -341,8 +423,20 @@ anyOf:
             $ref: "#/definitions/root-face"
           h2:
             $ref: "#/definitions/root-face"
-
+          code_number:
+            type: array
         required: [t, beta_1, beta_2, R, R2, b, c]
+        additionalProperties: false
+        wx_unit:
+          t: "m"
+          beta_1: "degree"
+          beta_2: "degree"
+          R: "m"
+          R2: "m"
+          b: "m"
+          c: "m"
+          h1: "m"
+          h2: "m"
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
@@ -352,7 +446,7 @@ anyOf:
     properties:
       type:
         type: string
-        const: FFGroove
+        enum: [FrontalFaceGroove]
       components:
         type: object
         properties:
@@ -366,8 +460,16 @@ anyOf:
             $ref: "#/definitions/root-gap"
           e:
             $ref: "#/definitions/special-depth"
-
+          code_number:
+            type: string
         required: [t_1]
+        additionalProperties: false
+        wx_unit:
+          t_1: "m"
+          t_2: "m"
+          alpha: "degree"
+          b: "m"
+          e: "m"
     required: [type, components]
     propertyOrder: [type, components]
     additionalProperties: true
