--- a/.codacy.yml
+++ b/.codacy.yml
@@ -11,7 +11,7 @@ engines:
 
 exclude_paths:
   - 'docs/**'
-  - '.vulture_whitelist.py'
   - 'versioneer.py'
   - 'weldx/_version.py'
   - 'scripts/**'
+  - 'CHANGELOG.md'
