--- a/weldx/asdf/schemas/weldx.bam.de/weldx/process/terms-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/process/terms-1.0.0.yaml
@@ -6,23 +6,26 @@ id: "http://weldx.bam.de/schemas/weldx/process/terms-1.0.0"
 title: |
   GMAW process definitions
 
-process:
-  base_process:
-    type: object
-    properties:
-      base_process:
-        type: string
-      manufacturer:
-        type: string
-      power_source:
-        type: string
-      parameters:
-        type: object
-      meta:
-        type: object
-    required: [base_process,manufacturer,power_source,parameters]
+base_process:
+  description: |
+    The base metadata format for all GMAW process descriptions.
+  type: object
+  properties:
+    base_process:
+      type: string
+    manufacturer:
+      type: string
+    power_source:
+      type: string
+    parameters:
+      type: object
+      wx_property_tag: "tag:weldx.bam.de:weldx/core/time_series-*"
+    meta:
+      type: object
+  required: [base_process,manufacturer,power_source,parameters]
 
-  spray_parameters:
+process:
+  spray:
     type: object
     properties:
       parameters:
@@ -34,28 +37,56 @@ process:
             $ref: "#/parameters/voltage"
         required: [wire_feedrate, voltage]
 
-  pulse_parameters:
-    type: object
-    properties:
-      parameters:
-        type: object
-        properties:
-          wire_feedrate:
-            tag: "tag:weldx.bam.de:weldx/core/time_series-1.0.0"
-            wx_unit: "m/s"
-          pulse_voltage:
-            tag: "tag:weldx.bam.de:weldx/core/time_series-1.0.0"
-            wx_unit: "V"
-          pulse_duration:
-            tag: "tag:weldx.bam.de:weldx/core/time_series-1.0.0"
-            wx_unit: "s"
-          pulse_frequency:
-            tag: "tag:weldx.bam.de:weldx/core/time_series-1.0.0"
-            wx_unit: "Hz"
-          base_current:
-            tag: "tag:weldx.bam.de:weldx/core/time_series-1.0.0"
-            wx_unit: "A"
-        required: [wire_feedrate, pulse_voltage, pulse_duration, pulse_frequency, base_current]
+  pulse:
+    UI:
+      type: object
+      properties:
+        parameters:
+          type: object
+          properties:
+            wire_feedrate:
+              $ref: "#/parameters/wire_feedrate"
+            pulse_voltage:
+               $ref: "#/parameters/pulse_voltage"
+            pulse_duration:
+               $ref: "#/parameters/pulse_duration"
+            pulse_frequency:
+               $ref: "#/parameters/pulse_frequency"
+            base_current:
+               $ref: "#/parameters/base_current"
+          required: [wire_feedrate, pulse_voltage, pulse_duration, pulse_frequency, base_current]
+        meta:
+          type: object
+          properties:
+            modulation:
+              type: string
+              enum: [UI]
+          required: [modulation]
+
+    II:
+      type: object
+      properties:
+        parameters:
+          type: object
+          properties:
+            wire_feedrate:
+              $ref: "#/parameters/wire_feedrate"
+            pulse_current:
+               $ref: "#/parameters/pulse_current"
+            pulse_duration:
+               $ref: "#/parameters/pulse_duration"
+            pulse_frequency:
+               $ref: "#/parameters/pulse_frequency"
+            base_current:
+               $ref: "#/parameters/base_current"
+          required: [wire_feedrate, pulse_current, pulse_duration, pulse_frequency, base_current]
+        meta:
+          type: object
+          properties:
+            modulation:
+              type: string
+              enum: [II]
+          required: [modulation]
 
 parameters:
   wire_feedrate:
