--- a/weldx/asdf/schemas/weldx.bam.de/weldx/process/terms-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/process/terms-1.0.0.yaml
@@ -28,6 +28,9 @@ process:
   spray:
     type: object
     properties:
+      base_process:
+        type: string
+        enum: [spray]
       parameters:
         type: object
         properties:
@@ -41,6 +44,9 @@ process:
     UI:
       type: object
       properties:
+        base_process:
+          type: string
+          enum: [pulse]
         parameters:
           type: object
           properties:
@@ -66,6 +72,9 @@ process:
     II:
       type: object
       properties:
+        base_process:
+          type: string
+          enum: [pulse]
         parameters:
           type: object
           properties:
