--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
@@ -11,6 +11,8 @@ description: |
   is a tree.
 type: object
 properties:
+  name:
+    type: string
   root_system_name:
     description: |
       Name of the root coordinate system
@@ -23,8 +25,8 @@ properties:
     items:
       $ref: "tag:weldx.bam.de:weldx/core/transformations/coordinate_transformation-1.0.0"
 
-propertyOrder: [root_system_name, coordinate_systems]
-required: [root_system_name, coordinate_systems]
+propertyOrder: [name, root_system_name, coordinate_systems]
+required: [name, root_system_name, coordinate_systems]
 flowStyle: block
 additionalProperties: false
 
