--- a/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
+++ b/weldx/asdf/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
@@ -17,6 +17,26 @@ properties:
     description: |
       Name of the root coordinate system
     type: string
+  subsystems:
+    type: array
+    items:
+      type: object
+      properties:
+        name:
+          type: string
+        parent_sytem:
+          type: string
+        root_cs:
+          type: string
+        connecting_cs:
+          type: string
+        members:
+          type: array
+          items:
+            type: string
+      #propertyOrder: [name, parent_system, root_cs, connecting_cs, members]
+
+
   coordinate_systems:
     description: |
       An array of all the coordinate systems' data. This includes their name, parent system and how they are arranged
@@ -25,7 +45,7 @@ properties:
     items:
       $ref: "tag:weldx.bam.de:weldx/core/transformations/coordinate_transformation-1.0.0"
 
-propertyOrder: [name, root_system_name, coordinate_systems]
+propertyOrder: [name, root_system_name, subsystems, coordinate_systems]
 required: [name, root_system_name, coordinate_systems]
 flowStyle: block
 additionalProperties: false
